# ScoutRadar

./: .gitignore  Makefile  README.md  phase1_validation.py  pyproject.toml
.github/workflows/: ci.yml
docs/: ML_workflow_report.docx  Problem Definition.docx  ProblemDefinition_EDA_Contributions.docx  transfer_success_schema.md
models/transfer_success/: transfer_preprocessor.pkl
notebooks/: 01_build_transfer_success_dataset.ipynb  02_train_transfer_success_models_mlflow.ipynb  DS_phase1.ipynb  EDA.ipynb  EDA_target.ipynb  MLworkflow.ipynb  label_data.ipynb  model_training_and_mlflow.ipynb  phase2_dashboard.ipynb  transfer_feature_engineering.ipynb
src/data/: __init__.py  make_dataset.py  transfer_dataset.py  transfer_modeling_cleaning.py
src/features/: __init__.py  build_features.py
src/models/: __init__.py  train_model.py  train_models.py  transfer_success_modeling.py
src/validation/: __init__.py  api.py  config.py  merged.py  primary.py  utils.py
tests/: synthetic_phase2_data.py  test_build_features.py  test_make_dataset.py  test_phase2_pipeline.py  test_transfer_dataset.py  test_transfer_modeling_cleaning.py  test_transfer_success_modeling.py  test_validation.py
