[project]
name = "scout-radar"
version = "0.1.0"
description = "Data Science Project - Phase 2"
authors = [
    {name = "kirobaghdad"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "mlflow>=2.3.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "imbalanced-learn>=0.11.0",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
