[project]
name = "scout-radar"
version = "0.1.0"
description = "Data Science Project - Phase 2"
authors = [
    {name = "kirobaghdad"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "python-dotenv>=1.0.0",
    "jupyter>=1.0.0",
    "great-expectations (>=1.16.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[tool.pytest.ini_options]
pythonpath = "."

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
ignore = ["F403", "F405", "E501", "F401"]
